@@ -183,6 +183,7 @@ CREATE TABLE `team` (
   `categoryid` int(4) unsigned NOT NULL default '0' COMMENT 'Team category ID',
   `affilid` varchar(10) default NULL COMMENT 'Team affiliation ID',
   `ipaddress` varchar(50) default NULL COMMENT 'IP address of team workstation',
+  `hostname` varchar(255) default NULL COMMENT 'Cached hostname associated with IP address',
   `passwd` varchar(32) default NULL COMMENT 'Team password (salted md5 hash)',
   `members` text COMMENT 'Team member names (freeform)',
   `room` varchar(15) default NULL COMMENT 'Physical location of team',
