@@ -53,12 +53,14 @@ Version 2.2.0 - SVN
  - Explicitly use DBSERVER host with mysql install (Closes: #1955439).
  - Display time left to end of contest on every page (Closes: #1960940).
  - Move php files that shouldn't be served to lib/www (Closes: #1957891).
- - The admin can exclude submissions from a teams score (Closes: #1742043).
+ - The admin can exclude submissions from a team's score (Closes: #1742043).
  - Limit jury submissions page by default to 50 submissions (Closes: #1964747).
  - More flexible debugging settings with a bitmask (Closes: #1759103).
  - Store testdata in database.
  - Add an anchor to the first changed line in the diff (Closes: #1818874).
  - Added 'domjudge_plugin' mysql user for the plugin webinterface.
+ - Cache hostname in team table to prevent slowdown on hosts without
+   working reverse.
 
 Version 2.1.1 - SVN
 -------------------
